added api/window/update and tests and documentation for it
